# harness-claude

./: .gitignore  AGENTS.md  README.md  build-codex-review-agent.sh  pyproject.toml  run.sh
docs/: LATER.md  PORT.md  agent-teams-mapping.md  cto-sound-hook.md
docs/claude-code-docs/: README.md
docs/superpowers/specs/: 2026-06-08-module-library-design.md  2026-06-09-codex-review-agent-design.md
harness/: cli.py  daemon.py  db.py  schema_scan.py
hooks/: cto_statusline.py  git_guard.py  project_memory.py  session_start.py  user_prompt_inbox_check.py
hooks/team/: skill_announce.py  task_completed_verify_gate.py  task_created_format_check.py  team_hook_common.py  teammate_idle_workcheck.py
plans/: harness-review.md  harness.md
plugins/_shared/: PROCESS.md  RULES.md
plugins/ceo/: role.md
plugins/ceo/commands/: build-module.md  build-project.md  codex-review.md  harness-audit.md  inbox.md  modules.md  msg-cto.md
plugins/ceo/scripts/: codex_review_launch.py
plugins/ceo/workflows/: harness-audit.js
plugins/codex-review/: AGENT.md  README.md  run-review.sh
plugins/codex-review/.codex-plugin/: plugin.json
plugins/codex-review/scripts/: report_writer.py  review_runner.py
plugins/cto/: role.md
plugins/cto/agents/: designer.md  developer.md  planner.md  reviewer.md
plugins/cto/commands/: inbox.md  modules.md  msg-ceo.md  start-project.md
plugins/cto/rules/: agent-team-protocol.md
plugins/cto/skills/harness-relay-qa/: SKILL.md
plugins/cto/skills/harness-remember/: SKILL.md
plugins/cto/skills/harness-self-improve/: SKILL.md
tests/: smoke.sh
(+9 files in other folders)
