[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-claude"
version = "0.1.0"
description = "Minimal CEO/CTO Claude tmux harness"
requires-python = ">=3.10"

[project.scripts]
harness = "harness.cli:main"

[tool.setuptools.packages.find]
include = ["harness*"]
